server handles multiple connections at once, also almost complete cleanup, starting to implement a potential client obj and parsing incoming commands

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 NAME = ircserve
 CC = c++
 CFLAGZ = -Wall -Wextra -Werror -std=c++98 -Iinclude -g
-SRCS = src/Server.cpp
+SRCS = main.cpp src/Server.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 GREEN = \033[0;32m
